--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
 </head>
 <body>
   <main>
-    <h1>A Whole Page to Myself</h1>
-    <p id="middle">This is Me</p>
-    <p>Thanks for playing with me</p>
+    <h1>Hi, my name is <span class="name">Quang</span></h1>
+    <img src="https://i.ibb.co/ZcHpDMV/44119802-10217785829494441-4749771175498874880-n.jpg" alt="44119802-10217785829494441-4749771175498874880-n" border="0">
+      <ol><span id="list_title">This is my top ten songs of all time:</span> 
+        <li><a href="https://www.youtube.com/watch?v=-FyjEnoIgTM" target="_blank">Versace on the Floor - Bruno Mars</a></li>
+        <li><a href="https://www.youtube.com/watch?v=96aAx0kxVSA" target="_blank">One Moment in Time - Whitney Houston</a></li>
+        <li><a href="https://www.youtube.com/watch?v=NGrLb6W5YOM" target="_blank">All By Myself - Celine Dion</a></li>
+        <li><a href="https://www.youtube.com/watch?v=DXvMT_mVbqw" target="_blank">All My Life - K-Ci and JoJo</a></li>
+        <li><a href="https://www.youtube.com/watch?v=NKe3I6YpY_I" target="_blank">Back at One - Brian McKnight</a></li>
+        <li><a href="https://www.youtube.com/watch?v=fJ9rUzIMcZQ" target="_blank">Bohemian Rhapsody - Queen</a></li>
+        <li><a href="https://www.youtube.com/watch?v=axySrE0Kg6k" target="_blank">Beauty and the Beast - John Legend and Ariana Grande</a></li>
+        <li><a href="https://www.youtube.com/watch?v=2Vv-BfVoq4g" target="_blank">Perfect - Ed Sheeran</a></li>
+        <li><a href="https://www.youtube.com/watch?v=uSD4vsh1zDA" target="_blank">I Gotta Feeling - Black Eyed Peas</a></li>
+        <li><a href="https://www.youtube.com/watch?v=nY2INMutWxk" target="_blank">Hotel California - Eagles</a></li>
+      </ol>
+    <p>Thanks for playing with <span class="name">me</span></p>
   </main> 
 </body>
 
